--- a/Dynamic Programming/11660/11660_guide.md
+++ b/Dynamic Programming/11660/11660_guide.md
@@ -29,7 +29,8 @@ for i in range(1, n + 1):
 for i in range(1, n):
     for j in range(1, n + 1):
         matrix[i + 1][j] += matrix[i][j]
-    
+
+# 구간 합 규칙에 따라 정해진 구역의 합 계산
 for _ in range(m):
     x1, y1, x2, y2 = map(int, input().split())
     print(matrix[x2][y2] - matrix[x1 - 1][y2] - matrix[x2][y1 - 1] + matrix[x1 - 1][y1 - 1])
