--- a/BFS/16953/16953_guide.md
+++ b/BFS/16953/16953_guide.md
@@ -12,7 +12,7 @@ A를 B로 바꾸는데 필요한 연산의 최솟값을 구해보자.
 ## 핵심 포인트
 ```
 - BFS를 적용할 경우 visited 배열을 사용하면 메모리 초과가 발생
-- 연산의 최솟값과 숫자를 리스트로 함께 삽입
+- 연산의 최솟값과 숫자를 Queue에 함께 삽입
 - B를 A로 바꾸는 연산 수행(2로 나누어지지 않거나 마지막 자리 수가 1이 아니면 연산 불가)
 ```
 
