--- a/Dynamic Programming/12015/12015_guide.md
+++ b/Dynamic Programming/12015/12015_guide.md
@@ -17,7 +17,9 @@
 ## 알고리즘 추가 설명
 ```
 입력 값 : [10, 20, 60, 30, 40]
-현재 값이 부분 수열의 최댓값보다 클 경우만 고려한다면 가장 긴 부분 수열은 [10, 20, 60]이 된다. 따라서 현재 값이 부분 수열의 최댓값보다 작은 경우에 현재 값이 들어갈 수 있는 인덱스를 찾아 부분 수열의 값을 바꿔줘야 한다. 이렇게 알고리즘을 구성할 경우 가장 긴 부분 수열은 [10, 20, 30, 40]이 될 수 있다.
+현재 값이 부분 수열의 최댓값보다 클 경우만 고려한다면 가장 긴 부분 수열은 [10, 20, 60]이 된다.   
+따라서 현재 값이 부분 수열의 최댓값보다 작은 경우에 현재 값이 들어갈 수 있는 인덱스를 찾아 부분 수열의 값을 바꿔줘야 한다.   
+이렇게 알고리즘을 구성할 경우 가장 긴 부분 수열은 [10, 20, 30, 40]이 될 수 있다.  
 ```
 
 ## 핵심 코드
