--- a/Brute Force/10972/10972_guide.md
+++ b/Brute Force/10972/10972_guide.md
@@ -28,12 +28,13 @@ for i in range(n - 1, 0, -1):
     if num_list[i] > num_list[i - 1]:
         # 뒤에서부터 값을 탐색하여 num_list[i - 1] 값보다 큰 값을 탐색
         for j in range(n - 1, 0, -1):
-            num_list[i - 1], num_list[j] = num_list[j], num_list[i - 1]
-            # 값을 바꾼 지점을 기준으로 순열 정렬
-            num_list = num_list[:i] + sorted(num_list[i:])
-            print(*num_list)
-            # 값을 출력했다면 정상 종료
-            exit(0)
+            if num_list[j] > num_list[i - 1]:
+                num_list[i - 1], num_list[j] = num_list[j], num_list[i - 1]
+                # 값을 바꾼 지점을 기준으로 순열 정렬
+                num_list = num_list[:i] + sorted(num_list[i:])
+                print(*num_list)
+                # 값을 출력했다면 정상 종료
+                exit(0)
 
 # 순열 리스트가 내림차순으로 되어있다면 -1 출력
 print(-1)
